[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Gun.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.454902, 0, 1, 1 )
metallic = 0.26
metallic_specular = 0.57
roughness = 0.62

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.3
bottom_radius = 0.3

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.501961, 0.501961, 0.501961, 1 )
metallic = 1.0
metallic_specular = 0.69
roughness = 0.33

[node name="Player" type="KinematicBody"]
collision_layer = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="CameraPivot" type="Spatial" parent="."]

[node name="CameraBoom" type="SpringArm" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.62115, 1.74412, 0 )
spring_length = 4.0

[node name="Camera" type="Camera" parent="CameraPivot/CameraBoom"]
transform = Transform( 0.999803, 0, 0.0198256, 0, 1, 0, -0.0198256, 0, 0.999803, 0, 0, 0 )

[node name="AimCast" type="RayCast" parent="CameraPivot/CameraBoom/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="Gun" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.686229, 0.876505, 1.86265e-09 )
script = ExtResource( 2 )

[node name="GunMesh" type="MeshInstance" parent="Gun"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Muzzle" type="Spatial" parent="Gun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.0192 )

[connection signal="timeout" from="Network_tick_rate" to="." method="_on_Network_tick_rate_timeout"]
